Worked on the following pages UI fixes as per sheet

--- a/src/app/components/auth/account-settings/account-settings.component.html
+++ b/src/app/components/auth/account-settings/account-settings.component.html
@@ -214,8 +214,8 @@
                                                                                 </small>
                                                                             </div>
                                                                             <div class="emailbtns">
-                                                                                <div class="cancles">
-                                                                                    <a href="#"> <button class="cancle-btn">Cancle</button></a>
+                                                                                <div class="Cancels">
+                                                                                    <a href="#"> <button class="Cancel-btn">Cancel</button></a>
                                                                                 </div>
                                                                                 <div class="saves">
                                                                                     <a href="#"> <button class="save-btn">Save</button></a>
@@ -269,8 +269,8 @@
 
                                                                                 </div>
                                                                                 <div class="emailbtns">
-                                                                                    <div class="cancles">
-                                                                                        <a href="#"> <button class="cancle-btn">Cancle</button></a>
+                                                                                    <div class="Cancels">
+                                                                                        <a href="#"> <button class="Cancel-btn">Cancel</button></a>
                                                                                     </div>
                                                                                     <div class="saves">
                                                                                         <a href="#"> <button class="save-btn">Save</button></a>
