--- a/src/app/components/auth/account-settings/orders/orders.component.html
+++ b/src/app/components/auth/account-settings/orders/orders.component.html
@@ -100,7 +100,7 @@
                                             </div>
 
                                             <div class="view-invoice">
-                                                <a href="#"> <button class="view-invoice-btn">View Invouce</button></a>
+                                                <a href="#"> <button class="view-invoice-btn">View Invoice</button></a>
                                             </div>
 
 
@@ -201,7 +201,7 @@
                                             </div>
 
                                             <div class="view-invoice">
-                                                <a href="#"> <button class="view-invoice-btn">View Invouce</button></a>
+                                                <a href="#"> <button class="view-invoice-btn">View Invoice</button></a>
                                             </div>
 
 
@@ -302,7 +302,7 @@
                                             </div>
 
                                             <div class="view-invoice">
-                                                <a href="#"> <button class="view-invoice-btn">View Invouce</button></a>
+                                                <a href="#"> <button class="view-invoice-btn">View Invoice</button></a>
                                             </div>
 
 
@@ -403,7 +403,7 @@
                                             </div>
 
                                             <div class="view-invoice">
-                                                <a href="#"> <button class="view-invoice-btn">View Invouce</button></a>
+                                                <a href="#"> <button class="view-invoice-btn">View Invoice</button></a>
                                             </div>
 
 
@@ -504,7 +504,7 @@
                                             </div>
 
                                             <div class="view-invoice">
-                                                <a href="#"> <button class="view-invoice-btn">View Invouce</button></a>
+                                                <a href="#"> <button class="view-invoice-btn">View Invoice</button></a>
                                             </div>
 
 
