--- a/src/app/components/layout/app-header/app-header.component.css
+++ b/src/app/components/layout/app-header/app-header.component.css
@@ -147,6 +147,8 @@ ul.right-menu li i.fas.fa-user-circle {
     min-width: 220px;
     width: 100%;
     padding: 6px 15px 6px 40px;
+    border: none;
+    background-color: #80808017;
 }
 
 .searchbar i {
@@ -200,14 +202,14 @@ a.nav-link.active {
     }
     div#main-menu.showmenu {
         position: absolute;
-        top: 58px;
+        top: 54px;
         background-color: #ffffff;
         z-index: 2;
         left: 0px;
         width: 100%;
         transition: all ease 0.5s;
         padding-bottom: 25px;
-        box-shadow: 0px 4px 5px #d0d0d0 !important;
+        box-shadow: 0px 13px 7px -6px #d5d1d1;
     }
     header .logo-center {
         position: absolute;
