--- a/src/styles.css
+++ b/src/styles.css
@@ -973,7 +973,7 @@ div#checkoutstep4 ngb-accordion .card-header button:hover {
     transform: translateY(-50%);
     transition: all ease 0.5s;
     position: absolute;
-    right: 13px;
+    right: 33px;
 }
 
 .paymentPage ngb-accordion.accordion .card-header button.btn-link[aria-expanded="false"] span.arrow-stepp,
@@ -981,7 +981,38 @@ div#checkoutstep4 ngb-accordion .card-header button:hover {
     transform: translateY(-50%);
     transition: all ease 0.5s;
     position: absolute;
-    right: 13px;
+    right: 33px;
+}
+
+
+/* 12/23/21 */
+
+.addressed ngb-accordion.accordion .card-header button.btn-link[aria-expanded="true"] span.arrow-stepp svg,
+.sidebar-ui ngb-accordion.accordion .card-header button.btn-link[aria-expanded="true"] span.arrow-stepp svg {
+    top: 3px;
+    transform: rotateZ(90deg);
+    position: absolute;
+    right: 5px;
+}
+
+.addressed ngb-accordion.accordion .card-header button.btn-link {
+    position: relative;
+}
+
+.addressed ngb-accordion.accordion .card-header button.btn-link[aria-expanded="true"] span.arrow-stepp,
+.sidebar-ui ngb-accordion.accordion .card-header button.btn-link[aria-expanded="true"] span.arrow-stepp {
+    transform: translateY(-50%);
+    transition: all ease 0.5s;
+    position: absolute;
+    right: 33px;
+}
+
+.addressed ngb-accordion.accordion .card-header button.btn-link[aria-expanded="false"] span.arrow-stepp,
+.sidebar-ui ngb-accordion.accordion .card-header button.btn-link[aria-expanded="false"] span.arrow-stepp {
+    transform: translateY(-50%);
+    transition: all ease 0.5s;
+    position: absolute;
+    right: 33px;
 }
 
 .conv_subscription_modal .modal-body {
@@ -1493,9 +1524,10 @@ div#card-info form#cardForm footer.panel__footer {
 
 /* enrollment page css */
 
-div#refered-sidebar {
+
+/* div#refered-sidebar {
     padding: 0px 20px;
-}
+} */
 
 .enrollment-page .col-xs-12,
 .col-md-12,
@@ -1907,6 +1939,7 @@ section.account-page.profile-page ngb-accordion.accordion.panel-stepbar .card {
 
 section.account-page.grid-checkout.orderspge button[aria-expanded="false"] span.arrow-stepp.ng-star-inserted {
     top: 44px;
+    /* right: 12px !important; */
 }
 
 section.account-page.grid-checkout.orderspge button[aria-expanded="true"] span.arrow-stepp.ng-star-inserted {
@@ -1928,6 +1961,7 @@ ngb-accordion.order-listing ul.ordered-previews li:not(:first-child) {
 .content-head-order {
     display: flex;
     justify-content: space-between;
+    padding: 0px 8px;
 }
 
 .content-head-order .top-left-order {
@@ -1945,11 +1979,11 @@ ngb-accordion.order-listing .card-header button:hover {
 }
 
 .content-head-order .order-name {
-    width: 70%;
+    width: 60%;
 }
 
 .content-head-order .total-amount-order {
-    width: 30%;
+    width: 40%;
 }
 
 .order-list-title {
@@ -1979,7 +2013,8 @@ ngb-accordion.accordion.order-listing button[aria-expanded="true"] .content-head
 }
 
 ngb-accordion.accordion.order-listing .card-body {
-    padding: 0 25px;
+    padding: 0 14px;
+    overflow: hidden;
 }
 
 .content-order-listing .placed-info {
@@ -2083,6 +2118,8 @@ ngb-accordion.accordion.order-listing div#order-listing-header button:focus {
     color: white;
     border-radius: 30px;
     border: 1px solid #1cb1c5;
+    text-transform: uppercase;
+    letter-spacing: 1px;
 }
 
 
@@ -2147,7 +2184,7 @@ ngb-accordion.accordion.order-listing div#order-listing-header button:focus {
     height: 15px;
 }
 
-.paymentPage button.btn.btn-link.collapsed.ng-star-inserted {
+.paymentPage button.btn.btn-link {
     padding: 13px 9px;
 }
 
@@ -2165,6 +2202,96 @@ section.account-page.grid-checkout.Subscription-page button[aria-expanded="false
 section.account-page.grid-checkout.Subscription-page button[aria-expanded="true"] span.arrow-stepp.ng-star-inserted {
     bottom: -31px !important;
     top: auto !important;
+}
+
+
+/* 12/23/21 enrollment */
+
+.enrollment-steps-5.addressed svg {
+    float: right;
+    margin-top: -30px;
+    /* width: 15px;
+    height: 15px;
+    margin-right: -2px; */
+}
+
+.address-paged.heading-step1 h4 {
+    padding-bottom: 7px !important;
+}
+
+.enrollment-steps-5.addressed button.btn.btn-link {
+    padding: 13px 9px;
+}
+
+.enrollment-steps-5.addressed span.arrow-stepp svg {
+    width: 15px;
+    height: 15px;
+}
+
+
+/* section.account-page.grid-checkout .emailbtns {
+    flex-direction: column;
+} */
+
+section.account-page.grid-checkout .emailbtns .saves {
+    margin: 10px 0 0 0;
+}
+
+.delete {
+    margin: 0px 8px;
+}
+
+section.account-page.grid-checkout .emailbtns .saves button.save-btn {
+    margin: 0;
+}
+
+.enrollment-steps-5 .signoutBtn button {
+    border: none;
+    background: transparent;
+    color: black;
+    font-family: 'g-regular';
+    font-weight: 600;
+    text-transform: uppercase;
+    line-height: 30px;
+}
+
+.enrollment-steps-5 .signoutBtn i.fas.fa-sign-out-alt {
+    color: #000000d1;
+    font-size: 16px;
+}
+
+.enrollment-steps-5 .signoutBtn {
+    padding: 0px 30px;
+    display: flex;
+    align-items: center;
+}
+
+.enrollment-steps-5 .signoutBtn svg {
+    width: 20px;
+    height: 20px;
+}
+
+table.table.order-summary td {
+    border: none;
+    padding: 6px 0px;
+    font-size: 12px;
+}
+
+.account-paged .card button[aria-expanded="false"] span.arrow-stepp svg,
+.account-paged .card button[aria-expanded="true"] span.arrow-stepp svg {
+    width: 11px;
+    height: 11px;
+    opacity: 0.5;
+}
+
+.account-paged .card button .order-list-title+span.arrow-stepp {
+    right: 13px !important;
+}
+
+.right-menu svg {
+    overflow: hidden;
+    vertical-align: middle;
+    margin-top: -7px;
 }
 
 
@@ -2246,6 +2373,26 @@ section.account-page.grid-checkout.Subscription-page button[aria-expanded="true"
 }
 
 @media (max-width: 991px) {
+    /* MEnu bar css */
+    span.searchicon-bar-mob {
+        position: absolute;
+        right: 50px;
+        top: 11px;
+    }
+    span.closeicon-search {
+        position: absolute;
+        top: 14px;
+        left: 44px;
+    }
+    button.toggleunclicked .closebarmenu {
+        display: none;
+    }
+    button.toggleclicked span.navbar-toggler-icon.menubar {
+        display: none;
+    }
+    nav.navbar {
+        box-shadow: none !important;
+    }
     .product-filters {
         padding: 0 !important;
         max-width: 90% !important;
@@ -2472,6 +2619,14 @@ section.account-page.grid-checkout.Subscription-page button[aria-expanded="true"
 }
 
 @media (max-width: 767px) {
+    /* 12/23/21 */
+    .enrollment-steps-5 .card-header {
+        padding: 0.55rem 0.25rem;
+    }
+    section.account-page.grid-checkout .emailbtns {
+        flex-direction: column;
+    }
+    /* 12/23/21 */
     .subsc-cta {
         max-width: 320px;
         margin: 20px 0 20px 0;
